--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -14,6 +14,9 @@
     padding: 0;
     margin: 0;
 }
+button{
+    cursor: pointer;
+}
 
 
 
@@ -56,6 +59,9 @@
     color: white;
     margin: 20px;
 }
+.header_main li a:hover{
+    color: #2B4964;
+}
 .header_login{
     display: flex;
 }
@@ -72,6 +78,10 @@
     border-style: none;
     border-radius: 18px;
 }
+.header_login button:hover{
+    background-color:rgba(255, 255, 255, 0.656);
+}
+
 /*SEC1*/
 
 .section1 div{
@@ -148,6 +158,7 @@
     color: #ADADAD;
     font-size: 24px;
     font-family: "comf";
+    text-indent: 50px;
 }
 .sec2_button{
     width: 749px;
